# Commerce-API-FastAPI

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup-ec2.sh
.nginx/: nginx.conf  python-app.conf
.service/: fluffie-api.service
fluffie_app/: __main__.py  env.py
fluffie_app/api/: route.py
fluffie_app/api/categoty/: __init__.py  get_all.py  get_id.py  get_product.py
fluffie_app/api/filters/: __init__.py  get_filters.py  (+1 more)
fluffie_app/config/: brand.py  positivelabels.py
fluffie_app/core/: config.py  exceptions.py  fastapi.py  hashing.py  logger.py  openapi.py
fluffie_app/db/: mongo.py  pinecone.py  redis.py
fluffie_app/helpers/: boosters.py  cache.py  clustered.py  custom_score_final.py  extract_labels.py  mongo_helpers_v2.py  pcsearch.py  pinecone_helpers.py  preprocess_search_query.py  search_helper.py  utils.py
fluffie_app/jobs/: cache_query_product.py
fluffie_app/middleware/: custom_response.py  metadata_adder.py
fluffie_app/models/: base.py  brand.py  key_benefits.py  label.py  master_categories.py  preferance.py  product_category.py  refined_category.py  register.py  review.py  search_query.py  single_product.py
fluffie_app/openai_functions/: extraction.py  openAIcompletion.py
fluffie_app/repositories/: label_repository.py
fluffie_app/schema/: autocomplete.py  base.py  master_categories.py  preferance.py  product_category.py  refined_category.py  register.py  review.py  searchSchema.py  single_product.py  skincare_labels.py
fluffie_app/utils/: async_wrap.py
scripts/: entrypoint.sh
(+43 files in other folders)
